# team_delft

./: README.md
apc16delft_bin_density/: CMakeLists.txt  package.xml
apc16delft_bin_density/src/: bin_density.cpp  bin_density_test.cpp
apc16delft_bringup/: CMakeLists.txt  package.xml  run_coordinator
apc16delft_bringup/launch/: pick_bringup.launch  pick_coordinator.launch  stow_bringup.launch  stow_coordinator.launch
apc16delft_calibration/: CMakeLists.txt  package.xml
apc16delft_calibration/launch/: gripper.launch  tote.launch
apc16delft_calibration/src/: calibration_coordinator.cpp
apc16delft_camera/: CMakeLists.txt  package.xml
apc16delft_camera/launch/: cameras.launch  gripper.launch  tote.launch
apc16delft_camera/src/: ensenso_camera.cpp
apc16delft_coordinator/: CMakeLists.txt  package.xml
apc16delft_coordinator/launch/: pick_test.launch  stow_test.launch
apc16delft_coordinator/scripts/: pick_coordinator.py  stow_coordinator.py
apc16delft_data/: CMakeLists.txt  package.xml
apc16delft_data/coordinator/: 20160531a.json  20160531b.json  apc_pick_task.json  apc_pick_task_2.json  apc_pick_task_3.json  apc_pick_task_4.json  apc_pick_task_5.json  apc_pick_task_custom.json  apc_stow_task.json  apc_stow_task_1.json  apc_stow_task_2.json  apc_stow_task_3.json  apc_stow_task_4.json  may20_2jobs.json  may20_coffee.json  may20_glue.json
apc16delft_data/launch/: param.launch  stow_param.launch
apc16delft_data/masterposes/: master_poses.yaml
apc16delft_data/models/: barkely_hide_bones.pcd  clorox_utility_brush.pcd  command_hooks.pcd  crayola_24_ct.pcd  creativity_chenille_stems.pcd  dasani_water_bottle.pcd  dove_beauty_bar.pcd  dr_browns_bottle_brush.pcd  easter_turtle_sippy_cup.pcd  elmers_washable_no_run_school_glue.pcd  expo_dry_erase_board_eraser.pcd  fiskars_scissors_red.pcd  fitness_gear_3lb_dumbbell.pcd  folgers_classic_roast_coffee.pcd  hanes_tube_socks.pcd  i_am_a_bunny_book.pcd  jane_eyre_dvd.pcd  kleenex_paper_towels.pcd  kleenex_tissue_box.pcd  kyjen_squeakin_eggs_plush_puppies.pcd  laugh_out_loud_joke_book.pcd  oral_b_toothbrush.pcd  peva_shower_curtain_liner.pcd  platinum_pets_dog_bowl.pcd  powercable.pcd  rawlings_baseball.pcd  rolodex_jumbo_pencil_cup.pcd  safety_first_outlet_plugs.pcd  scotch_bubble_mailer.pcd  scotch_duct_tape.pcd  soft_white_lightbulb.pcd  staples_index_cards.pcd  ticonderoga_12_pencils.pcd  up_glucose_bottle.pcd  woods_extension_cord.pcd
apc16delft_data/object_detection/: test.prototxt
apc16delft_data/param/: barkely_hide_bones.yaml  cherokee_easy_tee_shirt.yaml  clorox_utility_brush.yaml  cloud_b_plush_bear.yaml  command_hooks.yaml  cool_shot_glue_sticks.yaml  crayola_24_ct.yaml  creativity_chenille_stems.yaml  dasani_water_bottle.yaml  dove_beauty_bar.yaml  dr_browns_bottle_brush.yaml  easter_turtle_sippy_cup.yaml  elmers_washable_no_run_school_glue.yaml  expo_dry_erase_board_eraser.yaml  fiskars_scissors_red.yaml  fitness_gear_3lb_dumbbell.yaml  folgers_classic_roast_coffee.yaml  hanes_tube_socks.yaml  i_am_a_bunny_book.yaml  jane_eyre_dvd.yaml  kleenex_paper_towels.yaml  kleenex_tissue_box.yaml  kyjen_squeakin_eggs_plush_puppies.yaml  laugh_out_loud_joke_book.yaml  oral_b_toothbrush_green.yaml  oral_b_toothbrush_red.yaml  peva_shower_curtain_liner.yaml  platinum_pets_dog_bowl.yaml  rawlings_baseball.yaml  rolodex_jumbo_pencil_cup.yaml  safety_first_outlet_plugs.yaml  scotch_bubble_mailer.yaml  scotch_duct_tape.yaml  soft_white_lightbulb.yaml  staples_index_cards.yaml  ticonderoga_12_pencils.yaml  up_glucose_bottle.yaml  womens_knit_gloves.yaml  woods_extension_cord.yaml
apc16delft_data/scripts/: interface_generator_2016.py  interface_test_2016.py  run.sh
apc16delft_data/stow_param/: barkely_hide_bones.yaml  bin_params.yaml  cherokee_easy_tee_shirt.yaml  clorox_utility_brush.yaml  cloud_b_plush_bear.yaml  command_hooks.yaml  cool_shot_glue_sticks.yaml  crayola_24_ct.yaml  creativity_chenille_stems.yaml  dasani_water_bottle.yaml  dove_beauty_bar.yaml  dr_browns_bottle_brush.yaml  easter_turtle_sippy_cup.yaml  elmers_washable_no_run_school_glue.yaml  expo_dry_erase_board_eraser.yaml  fiskars_scissors_red.yaml  fitness_gear_3lb_dumbbell.yaml  folgers_classic_roast_coffee.yaml  hanes_tube_socks.yaml  i_am_a_bunny_book.yaml  jane_eyre_dvd.yaml  kleenex_paper_towels.yaml  kleenex_tissue_box.yaml  kyjen_squeakin_eggs_plush_puppies.yaml  laugh_out_loud_joke_book.yaml  oral_b_toothbrush_green.yaml  oral_b_toothbrush_red.yaml  peva_shower_curtain_liner.yaml  platinum_pets_dog_bowl.yaml  rawlings_baseball.yaml  rolodex_jumbo_pencil_cup.yaml  safety_first_outlet_plugs.yaml  scotch_bubble_mailer.yaml  scotch_duct_tape.yaml  soft_white_lightbulb.yaml  staples_index_cards.yaml  ticonderoga_12_pencils.yaml  tote_params.yaml  up_glucose_bottle.yaml  womens_knit_gloves.yaml  (+1 more)
apc16delft_data/trajectories/: bin0_to_cam0.yaml  bin0_to_home.yaml  bin0_to_tote.yaml  bin10_to_cam10.yaml  bin10_to_home.yaml  bin10_to_tote.yaml  bin11_to_cam11.yaml  bin11_to_home.yaml  bin11_to_tote.yaml  bin1_to_cam1.yaml  bin1_to_home.yaml  bin1_to_tote.yaml  bin2_to_cam2.yaml  bin2_to_home.yaml  bin2_to_tote.yaml  bin3_to_cam3.yaml  bin3_to_home.yaml  bin3_to_tote.yaml  bin4_to_cam4.yaml  bin4_to_home.yaml  bin4_to_tote.yaml  bin5_to_cam5.yaml  bin5_to_home.yaml  bin5_to_tote.yaml  bin6_to_cam6.yaml  bin6_to_home.yaml  bin6_to_tote.yaml  bin7_to_cam7.yaml  bin7_to_home.yaml  (+241 more)
apc16delft_description/: CMakeLists.txt  package.xml
apc16delft_fake_components/: CMakeLists.txt  package.xml
apc16delft_grasp_synthesizer/: CMakeLists.txt  package.xml
apc16delft_gripper/: CMakeLists.txt  package.xml
apc16delft_motion/: CMakeLists.txt  package.xml
apc16delft_msgs/: CMakeLists.txt  error_numbering  package.xml
apc16delft_object_detection/: CMakeLists.txt  package.xml  setup.py
apc16delft_place_synthesizer/: CMakeLists.txt  package.xml
apc16delft_pose_estimation/: CMakeLists.txt  package.xml
apc16delft_simulation/: CMakeLists.txt  package.xml
apc16delft_util/: CMakeLists.txt  package.xml
apc16delft_vision/: CMakeLists.txt  package.xml
(+329 files in other folders)
