<?xml version="1.0"?>
<package format="2">
	<name>apc16delft_camera</name>
	<version>0.0.0</version>
	<description>The apc16delft_camera package</description>
	<maintainer email="j.c.gaiser@delftrobotics.com">Hans Gaiser</maintainer>
	<license>Apache v2.0</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>apc16delft_msgs</depend>
	<depend>apc16delft_util</depend>
	<depend>dr_ensenso</depend>
	<depend>dr_eigen</depend>
	<depend>std_srvs</depend>
	<depend>image_transport</depend>

</package>
