<?xml version="1.0"?>
<package format="2">
	<name>apc16delft_fake_components</name>
	<version>0.0.0</version>
	<description>Fake components for testing the apc16delft system.</description>
	<license>Apache v2.0</license>

	<maintainer email="maarten@de-vri.es">Maarten de Vries</maintainer>
	<author email="maarten@de-vri.es">Maarten de Vries</author>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>apc16delft_msgs</depend>
	<depend>apc16delft_util</depend>
	<depend>dr_eigen</depend>
	<depend>dr_param</depend>
	<depend>cv_bridge</depend>
	<depend>pcl_conversions</depend>
	<depend>pcl</depend>
	<depend>roscpp</depend>
	<depend>sensor_msgs</depend>
</package>
