<?xml version="1.0"?>
<package format="2">
	<name>apc16delft_gripper</name>
	<version>0.0.0</version>
	<description>The apc16delft_gripper package</description>
	<maintainer email="j.e.t.tan@tudelft.nl">Jethro Tan</maintainer>
	<license>Apache v2.0</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>apc16delft_msgs</depend>
	<depend>apc16delft_util</depend>
	<depend>motoman_msgs</depend>

</package>
