<?xml version="1.0"?>
<package format="2">
  <name>apc16delft_motion</name>
  <version>0.0.0</version>
  <description>The apc16delft_motion package</description>

  <maintainer email="M.Bharatheesha@tudelft.nl">Mukunda</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>std_msgs</depend>
  <depend>apc16delft_msgs</depend>
  <depend>apc16delft_grasp_synthesizer</depend>
  <depend>geometric_shapes</depend>
  <depend>actionlib</depend>
  <depend>dr_param</depend>
  <depend>dr_eigen</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>rviz_visual_tools</depend>
  <depend>moveit_visual_tools</depend>
</package>
