<?xml version="1.0"?>
<package format="2">
	<name>apc16delft_pose_estimation</name>
	<version>0.0.0</version>
	<description>The apc16delft_pose_estimation package</description>

	<maintainer email="j.c.gaiser@delftrobotics.com">Hans Gaiser</maintainer>
	<license>Apache v2.0</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>apc16delft_msgs</depend>
	<depend>apc16delft_util</depend>
	<depend>cv2</depend>
	<depend>cv_bridge</depend>
	<depend>eigen_conversions</depend>
	<depend>pcl_conversions</depend>
	<depend>pcl_ros</depend>
	<depend>dr_eigen</depend>
	<depend>dr_param</depend>
</package>
