<?xml version="1.0"?>
<package format="2">
	<name>apc16delft_vision</name>
	<version>0.0.0</version>
	<description>The apc16delft_vision package</description>

	<maintainer email="j.c.gaiser@delftrobotics.com">Hans Gaiser</maintainer>
	<license>Apache v2.0</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>apc16delft_msgs</depend>
	<depend>apc16delft_util</depend>
	<depend>geometry_msgs</depend>
	<depend>roscpp</depend>
	<depend>sensor_msgs</depend>
	<depend>pcl_conversions</depend>
	<depend>pcl_ros</depend>
	<depend>dr_param</depend>
</package>
